# opportunity-tracker

./: "How to Prepare?".md  .gitignore  GUIDE.md  LICENSE  README-pt.md  README.md  config.yaml  graduation.ics  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
data/: ai_ml_research_fellowships.csv  conferences.csv  graduation.csv  graduation_opportunities.csv  industry.csv  master_programs.csv  master_programs_preparation.csv  masters.csv
opportunity_calendar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
output/: ai_ml_research_fellowships.ics  conferences.ics  graduation.ics  industry.ics  masters.ics
public/: graduation.ics  index.html
scripts/: __init__.py  build.py  sync_sheets.py
src/: __init__.py  calendar_generator.py  cli.py  datasets.py  models.py  parser.py
src/core/: __init__.py  calendar_event.py  ics_generator.py
src/domain/: __init__.py  calendar_event.py  conference.py  graduation_opportunity.py  master_program.py  utils.py
src/extractors/: __init__.py  conference_event_extractor.py  graduation_event_extractor.py  legacy_opportunity_extractor.py  master_program_event_extractor.py
tests/: conftest.py  test_ai_ml_research_fellowships_parser.py  test_build_pipeline.py  test_calendar_generator.py  test_calendar_leadtime.py  test_cli.py  test_cli_generate_all.py  test_graduation_parser.py  test_ics_generator.py  test_models.py  test_parsers_masters_industry_conferences.py  test_public_calendar_links.py  test_sync.py
tutorials-and-info/: "How to Contribuite?".md  "How to Prepare?".md
(+13 files in other folders)
